adedb some changes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,6 @@ a {
   color: #00B7FF;
 }
 .bagAttr { 
-  background-color: aquamarine; 
+  background-color: rgb(255, 127, 136); 
   width: 120px; 
 } 
