--- a/views/Bagupdate.pug
+++ b/views/Bagupdate.pug
@@ -1,6 +1,9 @@
 extends layout
 block content
   h1= title
+   if (toShow == null)
+  h2 No instance to update
+ else
   - let Bagid = toShow._id
   - let Bag_type = toShow.Bag_type
   - let Bag_Name = toShow.Bag_Name
