--- a/views/Bag.pug
+++ b/views/Bag.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h1= title
-    - iet Bag = results;
+    - let Bag = results;
         div(class="container-fluid")
          div(class="row m-1")
             each item in Bag 
@@ -10,7 +10,6 @@ block content
                 div(class="row-sm-2",class="m-1") Bag_type:#{item["Bag_type"]} <br> Bag_cost:#{item["Bag_cost"]} <br> Bag_Name:#{item["Bag_Name"]}
                   button.btn(class="btn-primary m1-1", onclick= destination) update
            
-     script.
-        function buy(path) {
-         window.location.href=path;
-        }
+        script.
+            function dispatch(path) {
+                 window.location.href=path;}
