--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,12 @@
-extends layout
-
-block content
-   h1= title
-   p Welcome to #{title}
-   p i am doing the webapps lab 10.
-   button(type="button", class="btn btn-secondary", onclick="doBump()") Press Me
-   div(id='bump') Bump the count
-   script.
-      var count = 0;
-      var bump = 1;
-      function doBump(){
-        count += bump;
-        bump ++;
-        document.getElementById("bump").innerHTML = "count" + count + "with bump" + bump;
-     }
-
- a(href="/Bag") Link to Bag
+extends layout 
  
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/Bag") Take me to Bag
+    br 
+    a(href="/logout") Logout 
