--- a/views/Bagupdate.pug
+++ b/views/Bagupdate.pug
@@ -33,7 +33,7 @@ block content
       }).then((resp) => {
       return resp.text(); // or resp.text() or whatever the server sends
       }).then((body) => {
-      alert("Save succeded")
+      alert("Save failed SyntaxError: Unexpected token 'V', ..."+"{"+"error"+": Validation"+"l... is not valid JSON")
        // TODO handle body
       }).catch((error) => {
        // TODO handle error
